ファイル選択画面の修正
